--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
+  "description": "Personal portfolio website",
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
